fix: show vertical and horizontal scroll bar

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -280,7 +280,6 @@
 /* Base styles */
 * {
   border-color: var(--color-border);
-  scrollbar-width: none;
 }
 
 body {
